--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body{
   background-color: #000000;
 }
 
-.bgBody{
+.calcBody{
   position: relative;
   display: flex;
   justify-content: center;
